Copy Material to Others causes incorrect viewport display if target object uses more materials #38161

Closed
opened 2014-01-11 11:55:18 +01:00 by Fabian Hernandez · 7 comments

System Information
OS X 10.9.1

Blender Version
Broken: 2.63 r46461 – 2.69 r60991
Worked: 2.62 r44136 and before

Short description of error
Copy Material to Others causes incorrect viewport display if target object uses more materials. A workaround is to switch to Edit Mode and back again.

Exact steps for others to reproduce the error

  • Open attached blend file
  • Execute Copy Material to Others. The faces where the second material had been used are not displayed correctly.

copy-material-to-others.blend

**System Information** OS X 10.9.1 **Blender Version** Broken: 2.63 r46461 – 2.69 r60991 Worked: 2.62 r44136 and before **Short description of error** Copy Material to Others causes incorrect viewport display if target object uses more materials. A workaround is to switch to Edit Mode and back again. **Exact steps for others to reproduce the error** - Open attached blend file - Execute **Copy Material to Others**. The faces where the second material had been used are not displayed correctly. [copy-material-to-others.blend](https://archive.blender.org/developer/F66611/copy-material-to-others.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @FabianHernandez

Added subscriber: @FabianHernandez

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2014-01-17 12:42:47 +01:00

This issue was referenced by blender/blender-addons-contrib@df88dbf955

This issue was referenced by blender/blender-addons-contrib@df88dbf955919c1178009781ee6462ff339818a6

This issue was referenced by df88dbf955

This issue was referenced by df88dbf955919c1178009781ee6462ff339818a6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit df88dbf955.

Closed by commit df88dbf955.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38161
No description provided.