Fix T38161: Copy Material to Others causes incorrect viewport display if target object uses more materials

We need to update object data, like when removing a mat slot, since some mat indices might have become invalid!